--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-, "middleware.js", "next.config.js"  ],
+, "app/middleware.js", "next.config.js"  ],
   "exclude": [
     "node_modules"
   ]
