--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "@supabase/auth-ui-react": "^0.3.5",
     "@supabase/auth-ui-shared": "^0.1.3",
     "@supabase/supabase-js": "^2.21.0",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.0",
@@ -30,7 +28,11 @@
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^1.12.0",
-    "tailwindcss": "3.3.1",
+    "tailwindcss": "3.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "20.1.3",
+    "@types/react": "18.2.6",
     "typescript": "5.0.4"
   }
 }
