--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^1.12.0",
-    "tailwindcss": "3.3.1"
+    "tailwindcss": "3.3.1",
+    "tailwindcss-animate": "^1.0.5"
   },
   "devDependencies": {
     "@types/node": "20.1.3",
