--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.17",
+    "@radix-ui/react-label": "^2.0.1",
     "@radix-ui/react-slot": "^1.0.1",
     "@supabase/auth-helpers-nextjs": "^0.6.0",
     "@supabase/auth-helpers-react": "^0.3.1",
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.6.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "lucide-react": "^0.216.0",
     "next": "13.3.0",
     "postcss": "8.4.22",
     "react": "18.2.0",
