--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.1",
-    "tailwindcss-animate": "^1.0.5"
+    "tailwindcss-animate": "^1.0.5",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "20.1.3",
