--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.1",
     "tailwindcss-animate": "^1.0.5",
+    "unique-names-generator": "^4.7.1",
     "zod": "^3.21.4",
     "zod-validation-error": "^1.3.0"
   },
