--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
   "devDependencies": {
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
+    "encoding": "^0.1.13",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "typescript": "5.0.4"
   }
 }
