--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build NextJS App
+name: Check types and lint
 
 on:
   push:
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.8.x, 18.x]
+        node-version: [18.x]
 
     steps:
       - uses: actions/checkout@v3
