--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hot-toast": "^2.4.1",
     "react-qr-code": "^2.0.11",
     "short-uuid": "^4.2.2",
+    "stripe": "^12.7.0",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.1",
     "tailwindcss-animate": "^1.0.5",
